# dukIoT

./: .gitignore  .gitmodules  CMakeLists.txt  app.c  dependencies.cmake  dukIoT.mk  duk_config.h  main.c  mico_config.h
docs/: index.md
duktapert/: CMakeLists.txt  duktape.h
helper/: CMakeLists.txt  helper.c  helper.h
http_server/: app_httpd.c
http_server/web_data/: wififail.html  wifisetting.html
libs/: CMakeLists.txt
libs/iothubclienthttplib/: CMakeLists.txt  iothubclientlib.c  iothubclientlib.h
libs/iothubclientlib/: CMakeLists.txt  iothubclientlib.c  iothubclientlib.h
libs/iothubclientmqttlib/: CMakeLists.txt  iothubclientmqttlib.c  iothubclientmqttlib.h
modules/: CMakeLists.txt  azure-iothub.js  client.js  connectionstring.js  receiveevent.js  registry.js  sendevent.js  test.js  test1.js  test2.js  test3.js
src/: CMakeLists.txt  readme.txt
src/app/: CMakeLists.txt  app.c  cmdlet.js
src/app/cmdlets/: CMakeLists.txt  test.c
src/app/helper/: helper.c  helper.h
src/app/iothubclientlib/: iothubclientlib.c  iothubclientlib.h
src/app/libs/: CMakeLists.txt
src/app/libs/devicelib/: CMakeLists.txt  devicelib.c  devicelib.h
src/app/libs/devicelib/constr/: constr.c  constr.h
src/app/libs/iothubclientlib/: CMakeLists.txt  iothubclientlib.c  iothubclientlib.h
src/app/libs/iothubmessagelib/: CMakeLists.txt
src/app/libs/iothubplatformlib/: CMakeLists.txt
src/app/modules/: azure-iot-device.js  client.js  message.js  modulesearch.js  protocol.js  test.js
src/c-utility/: CMakeLists.txt
src/iothub_client/: CMakeLists.txt
src/serializer/: CMakeLists.txt
src/uamqp/: CMakeLists.txt
src/uamqp/c-utility/: CMakeLists.txt
src/uamqp/c-utility/testtools/umock-c/: CMakeLists.txt
src/uamqp/c-utility/testtools/umock-c/tests/umock_c_int/: umock_c_int.c
src/umqtt/: CMakeLists.txt  readme.md
src/umqtt/src/: mqtt_client.c
tests/: CMakeLists.txt
tests/iothubclientmqttlib_ut/: CMakeLists.txt  iothubclientmqttlib_ut.c
tools/windows/: build.cmd  build_client.cmd
wifi_config/: app_httpd.c  app_httpd.h  convert_web_data.ps1  helper.c  helper.h  web_data.c  wifi_config.c  wifi_config.h
wifi_config/web_data/: wififail.html  wifisetting.html  wifisuccess.html
